cmake_minimum_required(VERSION 3.10...3.19)
project(nvmkv)
add_subdirectory(varLengthHashTree)
add_subdirectory(node)
add_subdirectory(allocator)
add_subdirectory(fastalloc)
add_subdirectory(blink)
add_subdirectory(mass)
add_subdirectory(rng)
add_subdirectory(hashtree)
add_subdirectory(murmur)
add_subdirectory(bobhash)
add_subdirectory(art)
add_subdirectory(wort)
add_subdirectory(woart)
add_subdirectory(cceh)
add_subdirectory(fastfair)
add_subdirectory(roart)
add_subdirectory(concurrencyhashtree)
add_executable(nvmkv main.cpp)
#target_link_libraries(nvmkv PRIVATE nvmkv-blink nvmkv-cart nvmkv-mass nvmkv-rng vmmalloc)
target_link_libraries(nvmkv PRIVATE nvmkv-blink nvmkv-mass
        nvmkv-rng nvmkv-ht nvmkv-murmur nvmkv-bobhash32
        nvmkv-art nvmkv-wort nvmkv-woart nvmkv-cceh nvmkv-fastfair nvmkv-roart nvmkv-cht
        nvmkv-vlht)
